--- a/vcweb/experiment/forestry/templates/forestry/treatments/daniel.decaro/t1/participate.html
+++ b/vcweb/experiment/forestry/templates/forestry/treatments/daniel.decaro/t1/participate.html
@@ -227,7 +227,7 @@
     During each practice round (year), you have unlimited time to indicate how many trees you want to harvest, so that
     you can get used to the controls and become familiar with the information being displayed. During practice, the
     trees you harvest <em>do not count towards your earnings, and they will not affect the other group members</em>.
-    During the actual experiment, you will have <span data-bind='text:practiceRoundDuration'></span> seconds each round to
+    During the actual experiment, you will have <span data-bind='text:nextRoundDuration'></span> seconds each round to
     indicate how many trees you wish to harvest, and the trees you harvest will count towards your earnings. </p>
 <h4>Selecting Trees for Harvest</h4>
 <p>
@@ -494,6 +494,15 @@ Rate table), and the maximum possible harvest will be the same rate as before (s
 <p>
 Raise your hand if you have a question, and the experimenter will come over to your station and answer it.
 </p>
+<h3>Group Chat</h3>
+<p>
+<strong>Like before, you will be able to communicate with the members of your group.</strong> If you want to
+communicate with the members of your group, simply type your message(s) in the &quot;Chat&quot; window.
+</p>
+<ul>
+<li>You will have 5 minutes to chat.
+<li>You will also be able to chat during the regular <span data-bind='text:nextRoundDuration'></span>-second round.
+</ul>
 <ul class='pager'>
     <li class='next'>
     <a href='javascript: void(0)' data-bind='click: participantReady.bind($data, participantGroupId() + " finished phase two block one instructions") '>Ok, I understand</a>
@@ -501,6 +510,14 @@ Raise your hand if you have a question, and the experimenter will come over to y
 </ul>
 </script>
 <script type='text/html' id='PHASE_THREE_INSTRUCTIONS'>
+<h3>No Group Chat</h3>
+<p>
+<strong>From this point forward, you will NOT be able to communicate with your group members.</strong>
+</p>
+<p>
+We will now move on to the next round of the Forest Task.
+</p>
+
 <h3>A New Forest</h3>
 <p>
 <strong>Please read the following instructions carefully!</strong>
