prep for Django 1.9 compliance

--- a/vcweb/experiment/forestry/templates/forestry/treatments/daniel.decaro/t1/participate.html
+++ b/vcweb/experiment/forestry/templates/forestry/treatments/daniel.decaro/t1/participate.html
@@ -228,7 +228,8 @@
     you can get used to the controls and become familiar with the information being displayed. During practice, the
     trees you harvest <em>do not count towards your earnings, and they will not affect the other group members</em>.
     During the actual experiment, you will have <span data-bind='text:nextRoundDuration'></span> seconds each round to
-    indicate how many trees you wish to harvest, and the trees you harvest will count towards your earnings. </p>
+    indicate how many trees you wish to harvest, and the trees you harvest will count towards your earnings.
+</p>
 <h4>Selecting Trees for Harvest</h4>
 <p>
 The forest will be displayed in the middle of the screen each year, with a summary of how many trees are
