--- a/vcweb/experiment/forestry/templates/forestry/treatments/daniel.decaro/t1/participate.html
+++ b/vcweb/experiment/forestry/templates/forestry/treatments/daniel.decaro/t1/participate.html
@@ -70,13 +70,10 @@
 </div>
 </script>
 <script type='text/html' id='WELCOME'>
-<div class='panel panel-default'>
-    <div class='panel-heading'>
-        <h3 class='panel-title'>Welcome</h3>
-    </div>
-    <div class='panel-body'>
+<div class='hero-unit'>
+    <h2>Welcome</h2>
     <p>
-    The experiment will begin shortly after everyone has been assigned a station and has had time to log in.
+    The experiment will begin shortly.
     </p>
     <p>
     Please <strong>wait quietly and do not close this window, open any other applications, or communicate with any of
@@ -86,7 +83,6 @@
     Please also make sure to turn off, silence, and disable vibration alerts on your cell phones and any mobile devices
     before the experiment begins.
     </p>
-    </div>
 </div>
 </script>
 <script type='text/html' id='GENERAL_INSTRUCTIONS'>
@@ -252,6 +248,9 @@ you do not select a number of trees within the time allotted, you will be marked
     submitted. A countdown will alert you when there are 10 seconds left. If you do not select a harvest value, a
     default value of 0 will automatically be selected.
 </ol>
+<div class='example-harvest-screen'>
+<img src='{% static "images/forestry/harvest-example-screenshot.png" %}' class='img-thumbnail'>
+</div>
 <p>
 <strong>We will practice next</strong>. Use this opportunity to familiarize yourself with the information displayed, and
 then decide how many trees you would like to harvest. If you have any questions, please let the experimenter know.
@@ -269,7 +268,7 @@ then decide how many trees you would like to harvest. If you have any questions,
 <script type='text/html' id='PRACTICE_ROUND_RESULTS'>
     <h3>Practice Round Results</h3>
     <p>
-        If this had been been a paid session, you would have earned <strong class='text-success' data-bind='text: formattedTotalEarnings'></strong>.
+        If this had been been a paid session, you would have earned <strong class='text-success' data-bind='text: $root.formattedTotalEarnings'></strong>.
         The other participants' earnings will be shown in the following table.
     </p>
         <table class='table table-bordered table-condensed'>
@@ -362,7 +361,7 @@ Please raise your hand if you have a question, and the experimenter will come to
                 <td data-bind='text: number'></td>
                 <td data-bind='text: lastHarvestDecision'></td>
                 <td data-bind='text: totalHarvest'></td>
-                <td data-bind='text: formattedTotalEarnings'></td>
+                <td data-bind='text: $root.formattedTotalEarnings'></td>
             </tr>
             </tbody>
         </table>
@@ -372,15 +371,13 @@ Please raise your hand if you have a question, and the experimenter will come to
 <div data-bind='template: { name: "resource-visualization-template" }'></div>
 {% comment %} resource harvest decision section {% endcomment %}
 <div data-bind='ifnot: isResourceEmpty'>
-    <div class='row'>
-        <h3>Harvest</h3>
-        <form id='vcweb-form' method='post' class='form-horizontal' >
-            {% csrf_token %}
-            <div id='harvestDecisionDiv' class='control-group'>
-                <div data-bind='template: { name: "harvest-decision-multiselect-template" }'></div>
-            </div>
-        </form>
-    </div>
+    <h3>Harvest</h3>
+    <form id='vcweb-form' method='post' class='form-horizontal' >
+        {% csrf_token %}
+        <div id='harvestDecisionDiv' class='control-group'>
+            <div data-bind='template: { name: "harvest-decision-multiselect-template" }'></div>
+        </div>
+    </form>
 </div>
 </script>
 <script type='text/html' id='resource-visualization-template'>
@@ -571,7 +568,7 @@ Rate table), and the maximum possible harvest will be the same rate as before (s
     </p>
     <h2>Payment</h2>
     <p>
-        You have earned <strong class='text-success' data-bind='text: formattedTotalEarnings'></strong>.
+        You have earned <strong class='text-success' data-bind='text: $root.formattedTotalEarnings'></strong>.
     </p>
     <p>
     Members of your group earned the following:
@@ -581,7 +578,7 @@ Rate table), and the maximum possible harvest will be the same rate as before (s
         <tbody data-bind='foreach: groupEarnings'>
             <tr>
                 <td><span class='text-success' data-bind='text: number'></span></td>
-                <td><span class='text-success' data-bind='text: formattedTotalEarnings'></span></td>
+                <td><span class='text-success' data-bind='text: $root.formattedTotalEarnings'></span></td>
             </tr>
         </tbody>
     </table>
@@ -590,7 +587,7 @@ Rate table), and the maximum possible harvest will be the same rate as before (s
 <div data-bind="visible: $data.isResourceEmpty">
     <div class='well'>
         <center>
-            <img alt='depleted trees' src="{% static 'images/forestry/depleted-trees.jpg' %}" class="img-polaroid" width="425" height="282">
+            <img alt='depleted trees' src="{% static 'images/forestry/depleted-trees.jpg' %}" class="img-responsive" width="425" height="282">
         </center>
     </div>
     <div class='alert alert-danger'><i class='fa fa-warning'></i> There are no more trees to harvest. Please wait quietly until the next round begins.</div>
@@ -627,8 +624,8 @@ Rate table), and the maximum possible harvest will be the same rate as before (s
                 </form>
             </td>
             <!-- /ko -->
-            <td>
-                <button id='submitDecisionButton' data-bind='enable: submitHarvestDecisionEnabled, click: $root.submitDecision' type='submit' class='btn btn-primary submit-decision-button'>Ok, I'm ready</button>
+            <td style='margin-top: 15px;>
+            <button id='submitDecisionButton' data-bind='enable: submitHarvestDecisionEnabled, click: $root.submitDecision' type='submit' class='btn btn-primary submit-decision-button'>Ok, I'm ready</button>
             </td>
         </tr>
     </table>
@@ -901,7 +898,7 @@ Rate table), and the maximum possible harvest will be the same rate as before (s
             });
             model.formattedTotalEarnings = ko.pureComputed(function() {
                 return formatCurrency(parseFloat(model.totalEarnings()));
-            }
+            });
 
             model.afterRenderTemplate = function(elements) {
                 $('[data-content]').popover({placement: 'top', trigger: 'hover'});
