fix repeated round group randomization
- randomize_groups only applies on the first iteration of a repeated
  round

--- a/vcweb/experiment/forestry/templates/forestry/treatments/daniel.decaro/t1/participate.html
+++ b/vcweb/experiment/forestry/templates/forestry/treatments/daniel.decaro/t1/participate.html
@@ -248,9 +248,10 @@ you do not select a number of trees within the time allotted, you will be marked
     submitted. A countdown will alert you when there are 10 seconds left. If you do not select a harvest value, a
     default value of 0 will automatically be selected.
 </ol>
-<div class='example-harvest-screen'>
-<img src='{% static "images/forestry/harvest-example-screenshot.png" %}' class='img-thumbnail'>
-</div>
+<p class='example-harvest-screen'>
+<img src='{% static "images/forestry/harvest-example-screenshot.png" %}' class='figure-img img-fluid img-thumbnail'>
+<figcaption class='figure-caption'><em>Harvest example screenshot</em></figcaption>
+</p>
 <p>
 <strong>We will practice next</strong>. Use this opportunity to familiarize yourself with the information displayed, and
 then decide how many trees you would like to harvest. If you have any questions, please let the experimenter know.
