--- a/vcweb/core/templates/contact_form/contact_form.html
+++ b/vcweb/core/templates/contact_form/contact_form.html
@@ -8,7 +8,7 @@
     <div class='panel-heading'><a name='bugs'>how to report bugs effectively</a></div>
     <div class='panel-body'>
         Encountered a bug in the application? 
-        <a href='{{issues_url}}'>Let us know here.</a>
+        You can report it on <a href='{{issues_url}}'>GitHub.</a> or send us a message using the form below.
         Please include relevant detail on <strong>what actions led to the bug</strong>, including
         the <strong>URL in your browser bar</strong> {% comment %} [<a href='#footnote-1'>1</a>] {% endcomment %} and any <strong>relevant screenshots</strong>. Thanks for helping us make
         vcweb better!
