add qualtrics survey urls

--- a/vcweb/experiment/forestry/templates/forestry/treatments/daniel.decaro/t1/participate.html
+++ b/vcweb/experiment/forestry/templates/forestry/treatments/daniel.decaro/t1/participate.html
@@ -462,7 +462,13 @@ Raise your hand if you have a question, and the experimenter will come over to y
 </script>
 
 <script type='text/html' id='COMMUNICATION'>
+<p>
 <strong>Time Left: </strong> <span data-bind='text: timeRemaining'></span>
+</p>
+<p>
+You have <span data-bind='text: chatDurationInMinutes'></span> minutes to communicate with your group members, if you
+wish.
+</p>
 </script>
 
 <script type='text/html' id='PHASE_TWO_BLOCK_ONE_RESULTS'>
